--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.20.12",
-    "gatsby-image": "^2.3.1",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-preact": "^3.2.1",
-    "gatsby-plugin-react-helmet": "^3.2.1",
-    "gatsby-plugin-sharp": "^2.5.3",
-    "gatsby-plugin-typescript": "^2.3.1",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-transformer-sharp": "^2.4.3",
+    "gatsby": "^2.20.23",
+    "gatsby-image": "^2.3.3",
+    "gatsby-plugin-linaria": "^2.0.0",
+    "gatsby-plugin-manifest": "^2.3.4",
+    "gatsby-plugin-offline": "^3.1.3",
+    "gatsby-plugin-preact": "^3.2.2",
+    "gatsby-plugin-react-helmet": "^3.2.3",
+    "gatsby-plugin-sharp": "^2.5.5",
+    "gatsby-plugin-typescript": "^2.3.2",
+    "gatsby-source-filesystem": "^2.2.3",
+    "gatsby-transformer-sharp": "^2.4.5",
+    "linaria": "^1.4.0-beta.6",
     "preact": "^10.4.0",
     "preact-compat": "^3.19.0",
     "prop-types": "^15.7.2",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
@@ -33,8 +35,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^1.19.1",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "typescript": "^3.8.3"
