--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gatsby-plugin-typescript": "^2.3.2",
     "gatsby-source-filesystem": "^2.2.3",
     "gatsby-transformer-sharp": "^2.4.5",
-    "linaria": "^1.4.0-beta.6",
+    "linaria": "^2.0.0-alpha.1",
     "preact": "^10.4.0",
     "preact-compat": "^3.19.0",
     "prop-types": "^15.7.2",
